Bug 1729466 - Don't enqueue async logging messages when the async logger is not running. r=pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D125399